app-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: app-ns
  name: service-2049
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2049
